fix: chat messages jumping when opening/closing chat

--- a/code/UI/Chat.razor.scss
+++ b/code/UI/Chat.razor.scss
@@ -3,7 +3,7 @@ Chat {
 	bottom: 300px;
 	left: 100px;
 	width: 40vw;
-	height: 40vh;
+	height: auto;
 	justify-content: center;
 	font-weight: bold;
 	border-radius: 20px;
